fixed toList()